# sap-ecc-rfc-prototype

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SAP_MCP_PATCH_INSTRUCTIONS.md  countries.sample.json  docker-compose.yml  nginx.sample.conf  pyproject.toml
src/sap_mcp/: config.py  server.py
src/sap_mcp/bapi/: return_handler.py  table.py  transaction.py
src/sap_mcp/connection/: manager.py  mock.py
src/sap_mcp/tools/: generic_rfc.py  invoices.py  master_data.py  purchasing.py  sales.py  source_code.py
tests/: conftest.py  test_connection_manager.py  test_return_handler.py  test_stock_reorder_flow.py  test_tools.py
