[project]
name = "sap-mcp"
version = "0.1.0"
description = "SAP ECC RFC MCP Server - Exposes SAP BAPIs as tools for AI agents"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
# pyrfc must be installed separately (requires SAP NWRFC SDK):
#   pip install pyrfc
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
sap-mcp = "sap_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sap_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
